Se cambio el uso del id del medicamento para usar el nombre a la hora de crear una formula